<resources>
    <string name="app_name">TrashSure App</string>
    <string name="splash1">Latest Technology for Waste Identification !</string>
    <string name="splash2">a mobile application that uses image recognition technology to identify types of waste. By taking a photo of the waste you want to identify, this application provides information about the type of waste, helping users dispose of waste in a more appropriate and environmentally friendly way.</string>
    <string name="appname">TRASHSURE</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="create_your_pasword">Create Your Pasword</string>
    <string name="invitation">Join our amazing community. by filling in the column below !</string>
    <string name="welcome_trasher">Welcome TRASHER!</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="to_your_account">to your account</string>
    <string name="dont_have_an_account">Dont Have an account ?</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="hello_trasher">Hello TRASHER</string>
    <string name="name_user">Name User</string>
    <string name="logout">Logout</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="email">email</string>
    <string name="exchange">Exchange</string>
    <string name="classification">Classification</string>
    <string name="detection">Detection</string>
    <string name="do_you_have_trash_to">Do you have trash to</string>
    <string name="explore_your_trash">Explore your trash!</string>
    <string name="scan">Scan ?</string>
    <string name="title">Title</string>
    <string name="insight_for_you">Insight for you</string>
    <string name="keep_exploring_knowledge">Keep Exploring Knowledge !</string>
    <string name="with_trashsure">With Trashsure !</string>
    <string name="home">Home</string>
    <string name="nama_user">Nama User</string>
    <string name="hi">Hi ,</string>
    <string name="let_s_get_started">Let\'s GET STARTED !</string>
    <string name="welcome">WELCOME</string>
    <string name="helping_people_identify_types_of_trash_and_dispose_in_a_more_appropriate_and_environmentally_friendly_way">Helping people identify types of Trash and dispose in a more appropriate and environmentally friendly way.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal\n</string>
    <string name="satellite_type">Satellite\n</string>
    <string name="terrain_type">Terrain\n</string>
    <string name="hybrid_type">Hybrid\n</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="social_media">Social Media</string>
    <string name="notifications">Notifications</string>
    <string name="app_notification">App Notification</string>
    <string name="more">More</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="logoutSettings">Logout</string>
    <string name="edit_profilee">Edit Profile</string>
    <string name="my_locations">My Locations</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="help">Help</string>
    <string name="predict">Predict</string>
    <string name="result">Result</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="trashsure_for_better_environment">TrashSure for better environment!</string>
</resources>