<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/group1"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/L_elementGroup1"
        />

    <ImageView
        android:id="@+id/btnBackLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="76dp"
        android:layout_toStartOf="@+id/L_elementGroup1"
        android:src="@drawable/icon_back" />

    <TextView
        android:id="@+id/L_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/L_elementGroup1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="246dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="left"
        android:paddingTop="0dp"
        android:text="@string/sign_in"
        android:textColor="@color/secondaryColor"
        android:textSize="35sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/L_text2"
        android:layout_width="213dp"
        android:layout_height="38dp"
        android:layout_below="@+id/L_text1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="162dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/to_your_account"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/L_elementGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-18dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="-2dp"
        android:src="@drawable/group2" />

        <ImageView
            android:id="@+id/img_register"
            android:layout_width="214dp"
            android:layout_height="203dp"
            android:layout_below="@+id/L_text2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:src="@drawable/img_login" />

    <LinearLayout
        android:id="@+id/L.Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/img_register"
        android:padding="20dp">

        <EditText
            android:id="@+id/LoginEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_shape"
            android:hint="@string/enter_your_email"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="20dp"
            android:textSize="15sp"
            android:backgroundTint="@color/white"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/LoginPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_shape"
                android:hint="@string/enter_your_password"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="20dp"
                android:textSize="15sp"
                android:backgroundTint="@color/white"
                android:inputType="textPassword"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/LoginButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/L.Linear"
        android:background="@drawable/btn_shape"
        android:width="300dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:id="@+id/R.linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/LoginButtonLogin"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/txtsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_for_free"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:paddingStart="5dp"
            android:textColor="@color/secondaryColor"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</RelativeLayout>