<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardActivity">

    <TextView
        android:id="@+id/HelloTrasher"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="127dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/hello_trasher"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/fullnameuser"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HelloTrasher"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="186dp"
        android:text="@string/name_user"
        android:fontFamily="@font/poppins_regular"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/emailuser"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullnameuser"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="186dp"
        android:text="@string/name_user"
        android:fontFamily="@font/poppins_regular"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnLogoutDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailuser"
        android:layout_alignParentStart="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="10dp"
        android:text="@string/logout" />
</RelativeLayout>