<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/group1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:id="@+id/elementGroup1"
     />

    <ImageView
        android:id="@+id/gambartrash"
        android:layout_width="251dp"
        android:layout_height="242dp"
        android:layout_below="@+id/elementGroup1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="81dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="79dp"
        android:src="@drawable/img_welcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gambartrash"
        android:text="@string/appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_extrabold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:id="@+id/txtnameApp"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/txtsplash1"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtnameApp"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/helping_people_identify_types_of_trash_and_dispose_in_a_more_appropriate_and_environmentally_friendly_way"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:alpha="100" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtsplash1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="109dp"
        android:alpha="0"
        android:background="@drawable/btn_shape"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/let_s_get_started"
        android:textColor="@color/black"
        android:textSize="13sp"
        tools:alpha="100" />

    <ImageView
        android:id="@+id/elementGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/group2"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="255dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="102dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome"
        android:textColor="@color/secondaryColor"
        android:textSize="40sp" />


</RelativeLayout>